; ModuleID = '/home/carl/AnghaBench/lede/target/linux/mcs814x/files-3.18/drivers/net/ethernet/mcs8140/extr_nuport_mac.c_nuport_mac_free_rx_ring.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/mcs814x/files-3.18/drivers/net/ethernet/mcs8140/extr_nuport_mac.c_nuport_mac_free_rx_ring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nuport_mac_priv = type { i64, %struct.TYPE_2__*, i32** }
%struct.TYPE_2__ = type { i32 }

@RX_RING_SIZE = common dso_local global i32 0, align 4
@RX_ALLOC_SIZE = common dso_local global i32 0, align 4
@DMA_TO_DEVICE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nuport_mac_priv*)* @nuport_mac_free_rx_ring to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nuport_mac_free_rx_ring(%struct.nuport_mac_priv* %0) #0 {
  %2 = alloca %struct.nuport_mac_priv*, align 8
  %3 = alloca i32, align 4
  store %struct.nuport_mac_priv* %0, %struct.nuport_mac_priv** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %33, %1
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @RX_RING_SIZE, align 4
  %7 = icmp slt i32 %5, %6
  br i1 %7, label %8, label %36

8:                                                ; preds = %4
  %9 = load %struct.nuport_mac_priv*, %struct.nuport_mac_priv** %2, align 8
  %10 = getelementptr inbounds %struct.nuport_mac_priv, %struct.nuport_mac_priv* %9, i32 0, i32 2
  %11 = load i32**, i32*** %10, align 8
  %12 = load i32, i32* %3, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i32*, i32** %11, i64 %13
  %15 = load i32*, i32** %14, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %8
  br label %33

18:                                               ; preds = %8
  %19 = load %struct.nuport_mac_priv*, %struct.nuport_mac_priv** %2, align 8
  %20 = getelementptr inbounds %struct.nuport_mac_priv, %struct.nuport_mac_priv* %19, i32 0, i32 2
  %21 = load i32**, i32*** %20, align 8
  %22 = load i32, i32* %3, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32*, i32** %21, i64 %23
  %25 = load i32*, i32** %24, align 8
  %26 = call i32 @dev_kfree_skb(i32* %25)
  %27 = load %struct.nuport_mac_priv*, %struct.nuport_mac_priv** %2, align 8
  %28 = getelementptr inbounds %struct.nuport_mac_priv, %struct.nuport_mac_priv* %27, i32 0, i32 2
  %29 = load i32**, i32*** %28, align 8
  %30 = load i32, i32* %3, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i32*, i32** %29, i64 %31
  store i32* null, i32** %32, align 8
  br label %33

33:                                               ; preds = %18, %17
  %34 = load i32, i32* %3, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %3, align 4
  br label %4

36:                                               ; preds = %4
  %37 = load %struct.nuport_mac_priv*, %struct.nuport_mac_priv** %2, align 8
  %38 = getelementptr inbounds %struct.nuport_mac_priv, %struct.nuport_mac_priv* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %52

41:                                               ; preds = %36
  %42 = load %struct.nuport_mac_priv*, %struct.nuport_mac_priv** %2, align 8
  %43 = getelementptr inbounds %struct.nuport_mac_priv, %struct.nuport_mac_priv* %42, i32 0, i32 1
  %44 = load %struct.TYPE_2__*, %struct.TYPE_2__** %43, align 8
  %45 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %44, i32 0, i32 0
  %46 = load %struct.nuport_mac_priv*, %struct.nuport_mac_priv** %2, align 8
  %47 = getelementptr inbounds %struct.nuport_mac_priv, %struct.nuport_mac_priv* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = load i32, i32* @RX_ALLOC_SIZE, align 4
  %50 = load i32, i32* @DMA_TO_DEVICE, align 4
  %51 = call i32 @dma_unmap_single(i32* %45, i64 %48, i32 %49, i32 %50)
  br label %52

52:                                               ; preds = %41, %36
  ret void
}

declare dso_local i32 @dev_kfree_skb(i32*) #1

declare dso_local i32 @dma_unmap_single(i32*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
